podYml/svc/nginx-clusterip.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx-clusterip
  name: nginx-clusterip
spec:
  containers:
  - image: nginx
    name: ct-pod
