podYml/svc/nginx-lb.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx-lb
  name: nginx-lb
spec:
  containers:
  - image: nginx
    name: ct-pod
