podYml/svc/nginx-nodeport.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx-nodeport
  name: nginx-nodeport
spec:
  containers:
  - image: nginx
    name: ct-pod
