podYml/svc/pod-http.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: http-clusterip
  name: http-clusterip
spec:
  containers:
  - image: httpd
    name: ct-pod
---
apiVersion: v1
kind: Service
metadata:
  name: svc-httpd-clusterip
spec:
  selector:
    app: http-clusterip
  ports:
  - port: 80
    targetPort: 80
