podYml/svc/svc-clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
spec:
  selector:
    app: nginx-clusterip
  ports:
  - port: 80
    targetPort: 80
