podYml/svc/svc-loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-loadbalancer
spec:
  selector:
    app: nginx-lb
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
