podYml/svc/svc-nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
  selector:
    app: nginx-nodeport
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
